<resources>
    <string name="app_name">Home Rent App</string>
    <string name="name_is_required">Name is Required</string>
    <string name="email_is_required">Email is Required</string>
    <string name="mNumber_is_required">Mobile Number is Required</string>
    <string name="password_is_required">Password is Required</string>
    <string name="confirmPwd_is_required">Confirm Password is Required</string>
    <string name="both_password_must_be_match">Both Password Must be Match</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="enter_valid_email_address">Enter Valid Email Address</string>
    <string name="password_length">Invalid Password. minimum 6 characters,maximum 10 characters</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="pref_file_key">UserData</string>
    <string name="login_flag_key">loginflag</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="nearby">Nearby</string>
    <string name="saved">Saved</string>
    <string name="notification">Notification</string>
    <string name="message">Message</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="profile_image">Profile image</string>
    <string name="drawerButtonToggle">drawerButtonToggle</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="colse_navigation_drawer">Colse navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="enter_propety_type_like_house_apartment">enter propety type like house, apartment</string>
    <string name="upload_image">Upload Image</string>
    <string name="buliding_society_name">buliding/society name</string>
    <string name="how_many_bhk">How Many BHk</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="security_deposit">Security Deposit</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
</resources>