<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:title="@string/home"
            android:id="@+id/Home"
            />
        <item
            android:title="@string/profile"
            android:id="@+id/Profile"/>

        <item
            android:id="@+id/Nearby"
            android:title="@string/nearby"
            />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

    <item
        android:title="@string/saved"
        android:id="@+id/Saved"/>

    <item
        android:title="@string/notification"
        android:id="@+id/Notification" />

    <item
        android:title="@string/message"
        android:id="@+id/Message" />

    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">

    <item
        android:title="@string/setting"
        android:id="@+id/Setting" />

    <item
        android:title="@string/help"
        android:id="@+id/Help" />

    </group>

    <item
        android:id="@+id/Logout"
        android:title="@string/logout"

        />

</menu>