<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".Add_Home_Activity">

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="364dp"
      android:layout_height="146dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.34"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.027"
      app:srcCompat="@drawable/common_google_signin_btn_text_dark" />

  <Button
      android:id="@+id/upload_image_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      android:text="@string/upload_image"
      android:textAllCaps="false"
      android:textColor="#E91E63"
      android:textSize="18sp"
      android:textStyle="italic"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.237" />

  <EditText
      android:layout_marginTop="10sp"
      android:id="@+id/propretytype_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="text"
      android:hint="@string/enter_propety_type_like_house_apartment"
      tools:layout_editor_absoluteX="61dp"
      tools:layout_editor_absoluteY="215dp" />

  <EditText
      android:layout_marginTop="10sp"
      android:id="@+id/location_socname_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/buliding_society_name"
      android:inputType="text"
      tools:layout_editor_absoluteX="61dp"
      tools:layout_editor_absoluteY="215dp" />

  <EditText
      android:layout_marginTop="10sp"
      android:id="@+id/Location_editText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="text"
      android:hint="@string/location" />

  <EditText
      android:layout_marginTop="10sp"
      android:id="@+id/Bhk_editxText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/how_many_bhk"
      android:inputType="number" />

  <EditText
      android:layout_marginTop="10sp"
      android:id="@+id/squareft_EditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number"
      android:hint="sq.ft" />

  <EditText
      android:layout_marginTop="10sp"
      android:id="@+id/motheRent_EditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number"
      android:hint="@string/monthly_rent" />

  <EditText
      android:layout_marginTop="10sp"
      android:id="@+id/security_Deposit_EditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="number"
      android:hint="@string/security_deposit" />

  <Button
      android:background="@android:color/transparent"
      android:textColor="#E91E63"
      android:layout_marginTop="2sp"
      android:id="@+id/save_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/save" />

</LinearLayout>