<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEFBFF"
    tools:context=".RegistrationActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:rotation="180"-->
<!--        android:src="@drawable/bg_circle"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="monospace"
        android:text="Create Account"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/inputField"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:hint="@string/enter_name"
        android:drawableStart="@drawable/ic_user_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <EditText
        style="@style/inputField"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        style="@style/inputField"
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:drawableStart="@drawable/ic_phone_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <androidx.appcompat.widget.AppCompatSpinner
        style="@style/inputField"
        android:id="@+id/spUserType"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:paddingStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber" />

    <EditText
        style="@style/inputField"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spUserType" />

    <EditText
        style="@style/inputField"
        android:id="@+id/confirmPwd"
        android:layout_width="match_parent"
        android:hint="@string/enter_confirm_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_signup"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/confirmPwd"
        app:layout_constraintTop_toBottomOf="@+id/confirmPwd" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAlreadyAc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_btn_alreadyac"
        android:text="Already have an account"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="66dp"
        android:layout_height="59dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>